tests/107_for_non_bool_condition.err
pirxc compilation failed: exit status 1
Output: tests/107_for_non_bool_condition.pirx:3:5: expected an expression of type bool in for condition, got type int
Error: exit status 1
